--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
