--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-zoom": "^1.3.1",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
     "sass": "^1.65.1",
