--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
     "react-slick": "^0.29.0",
+    "react-slider": "^2.0.6",
     "react-tabs": "^6.0.2",
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
@@ -29,6 +30,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "@types/react-slider": "^1.3.1"
   }
 }
