--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
