--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-tabs": "^6.0.2",
