--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-paginate": "^8.2.0",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
+    "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
-    "@types/react-slider": "^1.3.1"
+    "@types/react-slider": "^1.3.1",
+    "@types/react-star-ratings": "^2.3.0"
   }
 }
