--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
@@ -22,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-star-ratings": "^2.3.0",
