--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
