--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
-NEXT_PUBLIC_API_ROOT = http://localhost:5000
+NEXT_PUBLIC_API_URL = http://54.162.218.36:3000/api/v1
+NEXT_PUBLIC_API_ROOT = http://54.162.218.36:3000
