--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-# NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
-NEXT_PUBLIC_API_URL = http://zulkar.me:3000/api/v1
-# NEXT_PUBLIC_API_ROOT = http://localhost:5000
+NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
+# NEXT_PUBLIC_API_URL = http://zulkar.me:3000/api/v1
+NEXT_PUBLIC_API_ROOT = http://localhost:5000
 # NEXT_PUBLIC_API_ROOT = http://54.226.132.225:3000
-NEXT_PUBLIC_API_ROOT = http://zulkar.me:3000
+# NEXT_PUBLIC_API_ROOT = http://zulkar.me:3000
