--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-slider": "^2.0.6",
     "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
