--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_URL = https://gazihomeappliances.com/api/v1
 # NEXT_PUBLIC_API_URL = http://204.152.197.183:3000/api/v1
 NEXT_PUBLIC_API_ROOT = https://gazihomeappliances.com
 # NEXT_PUBLIC_API_ROOT = http://204.152.197.183:3000
+NEXT_PUBLIC_DOMAIN = https://gazi-frontend.vercel.app
