add quill style

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-# NEXT_PUBLIC_API_URL = https://gazihomeappliances.com/api/v1
-NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
-# NEXT_PUBLIC_API_ROOT = https://gazihomeappliances.com
-NEXT_PUBLIC_API_ROOT = http://localhost:5000
+NEXT_PUBLIC_API_URL = https://gazihomeappliances.com/api/v1
+# NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
+NEXT_PUBLIC_API_ROOT = https://gazihomeappliances.com
+# NEXT_PUBLIC_API_ROOT = http://localhost:5000
 NEXT_PUBLIC_DOMAIN = https://gazi-frontend.vercel.app
