--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
     "react-paginate": "^8.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
