--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.1",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
     "react-paginate": "^8.2.0",
@@ -39,6 +36,9 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.5.0",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
     "@types/react-slick": "^0.23.10",
     "@types/react-slider": "^1.3.1",
     "@types/react-star-ratings": "^2.3.0"
