--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.1",
+    "cookies": "^0.9.1",
     "eslint": "8.47.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
