--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL = http://54.169.96.218/api/v1
-NEXT_PUBLIC_API_ROOT = http://54.169.96.218/
+NEXT_PUBLIC_API_URL = http://47.129.40.140/api/v1
+NEXT_PUBLIC_API_ROOT = http://47.129.40.140
