fix: add api validatio

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL = http://52.76.145.7/api/v1
-NEXT_PUBLIC_API_ROOT = http://52.76.145.7
+NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
+NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
