--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # NEXT_PUBLIC_API_URL = https://gazihomeappliances.com/api/v1
 # NEXT_PUBLIC_API_ROOT = https://gazihomeappliances.com
-NEXT_PUBLIC_API_URL = http://52.76.145.7/api/v1
-NEXT_PUBLIC_API_ROOT = http://52.76.145.7
+NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
+NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
 NEXT_PUBLIC_DOMAIN = https://gazi-frontend.vercel.app
