--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
-NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
+NEXT_PUBLIC_API_ROOT = http://api.gcart.com.bd:3001
 # NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
 # NEXT_PUBLIC_API_ROOT = http://localhost:5000
 
