--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
-NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
+# NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
+# NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
+
+NEXT_PUBLIC_API_URL = http://localhost:3001/api/v1
+NEXT_PUBLIC_API_ROOT = http://localhost:3001
