--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.1.0",
     "postcss": "8.4.28",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^4.10.1",
