--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
+    "next-i18next": "^15.3.1",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
