--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,8 @@
-# NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
-# NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
+NEXT_PUBLIC_API_URL = https://api.gcart.com.bd/api/v1
+NEXT_PUBLIC_API_ROOT = https://api.gcart.com.bd
 
-NEXT_PUBLIC_API_URL = http://localhost:3001/api/v1
-NEXT_PUBLIC_API_ROOT = http://localhost:3001
+# NEXT_PUBLIC_API_URL = http://localhost:3001/api/v1
+# NEXT_PUBLIC_API_ROOT = http://localhost:3001
 # NEXT_PUBLIC_API_URL = http://localhost:5000/api/v1
 # NEXT_PUBLIC_API_ROOT = http://localhost:5000
 
